--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "kill": "pkill -f 'nest start' || pkill -f 'backend-crm-nestjs' || true",
+    "start:dev": "npm run kill && nest start --watch",
+    "start:clean": "npm run kill && sleep 2 && nest start --watch",
+    "start:debug": "npm run kill && nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -32,6 +34,7 @@
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.2",
     "env": "^0.0.2",
+    "helmet": "^8.1.0",
     "mapped-types": "^0.0.1",
     "mongoose": "^8.18.1",
     "passport": "^0.7.0",
