--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "node --max-old-space-size=4096 ./node_modules/.bin/nest start",
     "kill": "pkill -f 'nest start' || pkill -f 'backend-crm-nestjs' || true",
     "start:dev": "npm run kill && nest start --watch",
     "start:clean": "npm run kill && sleep 2 && nest start --watch",
