--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "build:vercel": "nest build && npm run copy:package",
     "copy:package": "cp package.json dist/",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "node --max-old-space-size=4096 ./node_modules/.bin/nest start",
+    "start": "node dist/main",
     "kill": "pkill -f 'nest start' || pkill -f 'backend-crm-nestjs' || true",
-    "start:dev": "npm run kill && nest start --watch",
+    "start:dev": "nest start --watch",
     "start:clean": "npm run kill && sleep 2 && nest start --watch",
     "start:debug": "npm run kill && nest start --debug --watch",
     "start:prod": "node dist/main",
