--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,11 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "dist/main.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "dist/main.js"
-    }
-  ]
-}
+    "version": 2,
+    "functions": {
+      "api/index.js": {
+        "runtime": "@vercel/node"
+      }
+    },
+    "routes": [
+      { "src": "/(.*)", "dest": "api/index.js" }
+    ]
+  }
