Update build script in package.json to create api directory before copying main.js and change Vercel runtime to nodejs20.x

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build && cp dist/main.js api/index.js",
+    "build": "nest build && mkdir -p api && cp dist/main.js api/index.js",
     "build:vercel": "nest build && npm run copy:package",
     "copy:package": "cp package.json dist/",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
