--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,11 @@
     "version": 2,
     "functions": {
       "api/index.js": {
-        "runtime": "@vercel/node"
+        "runtime": "nodejs20.x"
       }
     },
     "routes": [
       { "src": "/(.*)", "dest": "api/index.js" }
     ]
   }
+  
