--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,5 @@
 {
-    "version": 2,
-    "functions": {
-      "api/index.js": {
-        "runtime": "@vercel/node@1.15.4"
-    }
-    },
-    "routes": [
-      { "src": "/(.*)", "dest": "/api/index.js" }
-    ]
-  }
+    "version": 2
 
- 
+}
+
