--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
-    "version": 2
-
+"version": 2,
+"functions": {
+    "api/index.js": {
+        "runtime": "@vercel/node@1.15.4"
+    }
+},
+"routes": [
+    {
+        "src": "/(.*)",
+        "dest": "/api/index.js"
+    }
+]
 }
-
