--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build && mkdir -p api && cp dist/main.js api/index.js",
-    "build:vercel": "nest build && npm run copy:package",
+    "build": "nest build && mkdir -p api && cp -r dist/* api/",
     "copy:package": "cp package.json dist/",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/main",
