--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,12 @@
 {
 "version": 2,
-"functions": {
-    "api/index.js": {
-        "runtime": "@vercel/node@1.15.4"
-    }
-},
+"builds": [
+    { "src": "dist/main.js", "use": "@vercel/node@1.15.4" }
+  ],
 "routes": [
     {
         "src": "/(.*)",
-        "dest": "/api/index.js"
+        "dest": "dist/main.js"
     }
 ]
 }
