--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "copy:package": "cp package.json dist/",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "node dist/main",
+    "start": "node --max-old-space-size=4096 ./node_modules/.bin/nest start",
     "kill": "pkill -f 'nest start' || pkill -f 'backend-crm-nestjs' || true",
-    "start:dev": "nest start --watch",
+    "start:dev": "npm run kill && nest start --watch",
     "start:clean": "npm run kill && sleep 2 && nest start --watch",
     "start:debug": "npm run kill && nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -30,8 +29,7 @@
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
-    "@types/bcryptjs": "^2.4.6",
-    "bcryptjs": "^3.0.2",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.2",
